<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ribbit</string>
    <string name="title_activity_main">Ribbit</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit_friends">Edit Friends</string>
    <string name="action_camera">Camera</string>
    <string name="action_logout">Log Out</string>
    <string name="action_send">Send</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="title_activity_recipients">Recipients</string>
    <string name="title_activity_view_image">Ribbit</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="signup_button_label">SIGN UP</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="sign_up_text">Don\'t have an account? Sign up</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address!</string>
    <string name="signup_error_title">Invalid Input</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_error_title">Invalid Input</string>
    <string name="edit_friends_error_message">Unable to display users</string>
    <string name="edit_friends_error_title">We\'re Sorry!</string>
    <string name="friends_list_error_message">Unable to display friends</string>
    <string name="friends_list_error_title">We\'re Sorry!</string>
    <string name="empty_inbox">Your inbox is empty</string>
    <string name="empty_friends">You have no friends! Make some using the "Edit Friends" action</string>
    <string name="empty_edit_friends">Ribbit has no other users!</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="error_external_storage">There was a problem access your device\'s external storage"</string>
    <string name="general_error">Sorry, there was an error</string>
    <string name="video_limit_warning">The selected video must be less than 10mb in size</string>
    <string name="video_pick_error">There was an error selecting the video</string>
    <string name="video_limit_error">The selected file is more than 1MB, please select another video</string>
    <string name="message_error_title">Sorry, there was an error</string>
    <string name="message_error_message">There was an error creating the message you would like to send</string>
    <string name="upload_error_title">Sorry, there was an error</string>
    <string name="upload_error_message">There was an error sending the message</string>

    <string name="content_description_background">Ribbit Frog Background Image</string>
    <string name="signin_subtitle">A Woodward Studio Project</string>
    <string name="content_description_button_divider">Button Divider</string>
    <string name="content_description_message_icon">Message Icon</string>
    <string name="content_description_user_avatar">User Avatar</string>
    <string name="content_description_user_checkmark">User Checkmark</string>

</resources>
